src/processing/idsuggestions.cpp
@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2004-2019 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
+ *   Copyright (C) 2004-2020 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -73,10 +73,11 @@ public:
         const QStringList titleWords = PlainTextValue::text(entry.value(Entry::ftTitle)).split(sequenceOfSpaces, QString::SkipEmptyParts);
 #endif // QT_VERSION >= 0x050e00
         int index = 0;
-        for (QStringList::ConstIterator it = titleWords.begin(); it != titleWords.end(); ++it, ++index) {
+        for (QStringList::ConstIterator it = titleWords.begin(); it != titleWords.end(); ++it) {
             const QString lowerText = normalizeText(*it).toLower();
             if ((removeSmallWords && smallWords.contains(lowerText)) || index < tti.startWord || index > tti.endWord)
                 continue;
+            ++index; ///< only increase index if actually considering current title word (not a 'small word')
 
             if (first)
                 first = false;
